--- a/source/theme.scss
+++ b/source/theme.scss
@@ -16,9 +16,6 @@
         opacity: 1;
         transition: .3s;
     }
-    #repo-name {
-        margin-top: -4px;
-    }
     #search {
         #search-wrapper {
             opacity: 0;
